css/app.css
/* ... */
.backstretch-caption {
    position: absolute;
    bottom: 0%;
    left: 0px;
    background: rgba(62, 115, 184, 0.7);
    max-width: 420px;
    font-size: 28px;
    color: #FFFFFF;
    border: none;
    padding: 40px 25px;
    text-align: center;
    /*
    font-family: "Oswald","Roboto Condensed",sans-serif;
    */
    text-transform: none;
    font-family: "Roboto Condensed", sans-serif;
    font-weight: 300;
}

.backstretch img {
    right: 0 !important;
    left: auto !important;
}



header .menu-button .fa {
    font-size: 44px;
    color: rgb(62, 115, 184);
}

header .menu-button.active .fa {
    color: rgb(121, 145, 57);
}

header .menu-button {
    position: absolute;
    top: 0px;
    right: 5%;
    cursor: pointer;
    padding: 42px 0px 0px 5%;
    display: none;
}

@media screen and (max-width: 767px) {
	.gallery-page .one-col{
		width:100%;
	}
	header .nav ul {
		display: none !important;
	}

    .two-col, .button-cta, .right-sidebar {
        width: 100%;
    }

    .right-sidebar {
        padding: 0 2% 100px 2%;
    }

    footer ul {
        min-width: 0 !important;
    }

    header {
        width: 100%;
    }

    nav.no-list-style {
        display: none;
    }
    header .logo {
        display: block;
        width: 250px;
        margin-left: 5%;
        margin-top: 2%;
        padding-bottom: 10px;
    }

    header .nav li a {
        display: block;
        width: 100%;
        padding: 8px 8px 8px 20px;
        background-color: #3e73b8;
        font-weight: 300;
        color: #fff;
        font-size: 1.2rem;
    }

    header .nav{
        display: none;
        width: 200px;
        position: absolute;
        z-index: 4;
        top: 100px;
        right: 0;
        border-top: 1px solid #eee;
        font-family: "Oswald","Roboto Condensed",sans-serif;
    }
    header .nav.active{
        display: block;
    }
    header .menu-button {
        display: block;
    }

}
/* STYLES FOR NAVIGATION ROADMAP PAGE */
.season-bar{
    background-color: #00407d;
    height: 55px;
    line-height: 55px;
    margin-left: -20px;
}
.season-bar h2{
    color: #9ba81a;
    margin-left: 20px;
}
.season-bar-content{
    background-color: #edebe9;
    margin: 15px 0;
    padding: 1px 20px;
}
.season-bar-content h4{
    color:#00407d;
    padding-top: 10px;
}
.rrmap-list, .rrmap-list2{
    list-style:disc;
    margin-left: 20px;
}
.rrmap-list2{
    margin-bottom: 10px;
}
.rrmap-list li span{
    position: relative;
    left: -.5em;
    font-weight: 600;
}
.rrmap-list p{
    margin-top: 0px;
    margin-left: -15px;
}

